--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "wrapper_alternative"
-version = "0.1.2"
+name = "one_period_shortage"
+version = "0.1.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "wrapper_alternative"
+name = "one_period_shortage"
 crate-type = ["cdylib"]
 
 [dependencies]
